package aranya.crm.entity;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.PrePersist;
import jakarta.persistence.Table;
import lombok.Getter;
import lombok.Setter;

import java.time.LocalDateTime;

@Getter
@Setter
@Entity
@Table(name = "service_appointment")
public class ServiceAppointment {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "case_id", nullable = false)
    private ClientCase clientCase;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "service_type_id", nullable = false)
    private ServiceType serviceType;

    @Column(name = "scheduled_start", nullable = false)
    private LocalDateTime scheduledStart;

    @Column(name = "scheduled_end")
    private LocalDateTime scheduledEnd;

    @Column(name = "report_due_at")
    private LocalDateTime reportDueAt; // 报告应提交的截止时间(可空,由分配者指定)

    @Column(name = "location")
    private String location;

    @Column(name = "work_description", columnDefinition = "TEXT")
    private String workDescription;

    @Column(name = "notes", columnDefinition = "TEXT")
    private String notes;

    @Column(name = "agenda", columnDefinition = "TEXT")
    private String agenda; // *Agenda*

    @Column(name = "schedule", columnDefinition = "TEXT")
    private String schedule; // *Schedule*

    @Column(name = "manpower", columnDefinition = "TEXT")
    private String manpower; // *Manpower*(自由文本)

    @Column(name = "instructions", columnDefinition = "TEXT")
    private String instructions; // *Instructions for Kappiya*

    @Column(name = "address", columnDefinition = "TEXT")
    private String address; // *Address* 正文完整地址(location 仅作标题短名)

    @Column(name = "event_seq")
    private Long eventSeq; // 全局事件序号,组织日历标题前缀

    @Column(name = "google_event_id", length = 1024)
    private String googleEventId; // 镜像到 Google 共享日历后的事件 ID(可空)

    @Column(name = "google_calendar_id", length = 255)
    private String googleCalendarId; // 镜像写入的目标日历 id(供删除定位)

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "assigned_user_id")
    private User assignedUser;

    @Column(name = "status", nullable = false, length = 20)
    private String status = "SCHEDULED";

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "created_by")
    private User createdBy;

    @Column(name = "created_at", nullable = false, updatable = false)
    private LocalDateTime createdAt;

    @Column(name = "updated_at")
    private LocalDateTime updatedAt;

    @PrePersist
    protected void onCreate() {
        if (this.createdAt == null) {
            this.createdAt = LocalDateTime.now();
        }
    }
}
